--- a/css/style.css
+++ b/css/style.css
@@ -14,10 +14,10 @@ body{
 display: flex;
 flex-direction: column;
 justify-content: space-between;
-height: 1026px;
+height: 1026px; 
 width: 414px;
 background-color: #eeeeee;
-box-sizing: border-box;
+
 
 }
 .container{
@@ -81,7 +81,7 @@ color: #333333;
     left: 0px;
     display: flex;
     flex-direction: row;
-    justify-content:  space-around;
+    
     background-color: #eeeeee;
     height: 216px;
     width: 550px;
@@ -120,7 +120,7 @@ border-radius: 50px;
 img{
 width: 144px;
 height: 87px;
-margin: 0 14px;
+
 margin-top: 18px;
 border-radius: 4px;
 }
@@ -131,7 +131,6 @@ height: 25px;
 background-color: #eeeeee;
 margin-top: 15px;
 margin-bottom: 15px;
-
 
 }
 
@@ -170,10 +169,17 @@ color: #000000;
     background-color: aqua;
 }
 .div-innerCard{
- margin-left: 13px;
+ margin-left: 14px;
+ margin-right: 14px;
  margin-top: 3px;
+ 
 }
-.div-innerCard img{
-    margin-left:0px;
-   
+
+
+.svg-icon{
+    display: none;
+}
+
+.selecionado {
+    border: 5px solid #32b72f;
 }
