--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@ background-color: #eeeeee;
     justify-content: space-between;
 }
 .top{
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 position:fixed;
 top:0;
 z-index: 1;
@@ -97,19 +98,18 @@ flex-direction: column;
 height: 100%;
 width: 172px;
 background:  white;
-box-shadow: 0px 0px 10px -4px rgba(0, 0, 0, 0.25);
 border-radius: 9px;
 margin-left: 15px;
 
 }
 
 .footer{
-position: fixed;
-bottom: 0;
-z-index: 1;
-Width:414px;
-Height:92px;
-background-color: white;
+    position: fixed;
+    bottom: 0;
+    z-index: 1;
+    Width:414px;
+    Height:92px;
+    background-color: white;
 }
 .btnPedir{
    
@@ -119,21 +119,20 @@ background-color: white;
     text-align: Center;
     Vertical-align: Top;
     Letter-spacing: 1.8%;
- position: relative;
-width: 364px;
-height: 61px;
-left: 25px;
-top: 10px;
-border:0px;
-background: #CBCBCB;
-border-radius: 50px;
+    position: relative;
+    width: 364px;
+    height: 61px;
+    left: 25px;
+    top: 10px;
+    border:0px;
+    background: #CBCBCB;
+    border-radius: 50px;
 }
 img{
-width: 144px;
-height: 87px;
-
-margin-top: 18px;
-border-radius: 4px;
+    width: 144px;
+    height: 87px;
+    margin-top: 18px;
+    border-radius: 4px;
 }
 
 .titulo{
@@ -210,10 +209,15 @@ color: #000000;
     background-color: aqua;
 }
 .div-innerCard{
- margin-left: 14px;
- margin-right: 14px;
- margin-top: 3px;
- 
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-color: #CF2B2B;
+    height: 100%;
+    margin-left: 14px;
+    margin-right: 14px;
+    margin-top: 3px;
+    
 }
 
 
@@ -226,6 +230,7 @@ color: #000000;
 }
 
 .selecionado {
+ 
     box-shadow: 0px 0px 10px -4px rgb(0 0 0 / 25%), inset 0px 0px 0px 5px #32b72f;
 }
 
