adicionando novas funcionalidades
adicionando a sessão overlay, para finalizar melhor os pedidos e revisar a compra

--- a/css/style.css
+++ b/css/style.css
@@ -11,12 +11,12 @@ body{
 }
 #main {
    
-display: flex;
-flex-direction: column;
-justify-content: space-between;
-height: 1026px; 
-width: 414px;
-background-color: #eeeeee;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 1026px; 
+    width: 414px;
+    background-color: #eeeeee;
 
 
 }
@@ -29,60 +29,59 @@ background-color: #eeeeee;
 }
 .top{
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-position:fixed;
-top:0;
-z-index: 1;
-background-color: #CF2B2B;
-width: 414px;
-height: 92px;
+    position:fixed;
+    top:0;
+    z-index: 1;
+    background-color: #CF2B2B;
+    width: 414px;
+    height: 92px;
 
 }
 
 .top h1{
-position: relative;
-width: 248px;
-height: 44px;
-left: 21px;
-top: 8px;
-font-family: 'Righteous', cursive;
-font-style: normal;
-font-weight: 400;
-font-size: 44px;
-line-height: 55px;
-letter-spacing: -0.012em;
-color: #FFFFFF;
+    position: relative;
+    width: 248px;
+    height: 44px;
+    left: 21px;
+    top: 8px;
+    font-family: 'Righteous', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 44px;
+    line-height: 55px;
+    letter-spacing: -0.012em;
+    color: #FFFFFF;
 
 }
 .top h3 {
-position: relative;
-width: 226px;
-height: 17px;
-left: 21px;
-top: 17px;
-font-family: 'Roboto', sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 18px;
-line-height: 21px;
-color: #FFFFFF;
+    position: relative;
+    width: 226px;
+    height: 17px;
+    left: 21px;
+    top: 17px;
+    font-family: 'Roboto', sans-serif;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 18px;
+    line-height: 21px;
+    color: #FFFFFF;
 
 }
 h2{
-font-family: 'Righteous', cursive;
-font-style: normal;
-font-weight: 400;
-font-size: 26px;
-line-height: 32px;
-letter-spacing: 0.018em;
-color: #333333;
+    font-family: 'Righteous', cursive;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 26px;
+    line-height: 32px;
+    letter-spacing: 0.018em;
+    color: #333333;
 
 }
 .sessao {
     margin-bottom: 30px;
     left: 0px;
     display: flex;
-    flex-direction: row;
-    
+    flex-direction: row; 
     background-color: #eeeeee;
     height: 216px;
     overflow-x: scroll;
@@ -93,17 +92,17 @@ color: #333333;
 }
 
 .card{
-position: relative;
-display: flex;
-flex-direction: column; 
-justify-content: space-around;
-padding-left: 10px;
-padding-right: 10px;
-padding-bottom: 8px;
-min-width: 172px;
-background:  white;
-border-radius: 9px;
-margin-left: 15px;
+    position: relative;
+    display: flex;
+    flex-direction: column; 
+    justify-content: space-around;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 8px;
+    min-width: 172px;
+    background:  white;
+    border-radius: 9px;
+    margin-left: 15px;
 
 }
 
@@ -141,11 +140,11 @@ img{
 }
 
 .titulo{
-margin-left: 13px;
-height: 25px;
-background-color: #eeeeee;
-margin-top: 15px;
-margin-bottom: 15px;
+    margin-left: 13px;
+    height: 25px;
+    background-color: #eeeeee;
+    margin-top: 15px;
+    margin-bottom: 15px;
 
 }
 
@@ -275,4 +274,27 @@ color: #000000;
 }
 .sobremesas{
     padding-bottom: 5px;
+}
+
+.overlay{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgba(255, 255, 255, 0.6);
+    z-index: 1;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 19px;
+
+}
+.confirmar-pedido{
+    background-color: #50D074;
+   /* box-shadow: 0px 0px 10px -4px rgb(0 0 0 / 25%), inset 0px 0px 0px 5px #32b72f; */
+}
+.btnConfirmarPedido{
+    background-color: #50D074;
+    border-radius: 10%;
 }
